--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,6 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-armake2 = {git = "https://github.com/SynixeBrett/armake2", branch = "restructure"}
+armake2 = {git = "https://github.com/SynixeBrett/armake2", branch = "restructure", default-features = false}
 regex = "*"
 hashbrown = "*"
